added fork me ribbon

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 		</style>
 	</head>
 	<body>
+		<a href="https://github.com/Manic0892/draw" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 		<div id='wrapper'>
 			<div id='stage'></div>
 			<div id='inputHolder'><input type='text' id="colorPicker" /><div id='pointSliderHolder'><input type='text' maxLength=3 size=1 id='px' /> px <div id='pointSliderInnerHolder'><div id='pointSlider'></div></div></div></div>
