--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 		<!--JAVASCRIPT LIBRARIES-->
 		<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
-		<script src='./kinetic-v4.3.1.js'></script>
-		<script src='./spectrum/spectrum.js'></script>
+		<script src='./lib/kinetic-v4.3.1.js'></script>
+		<script src='./lib/spectrum/spectrum.js'></script>
 		
 		<!--CSS LIBRARIES-->
-		<link rel='stylesheet' href='./spectrum/spectrum.css' />
-		<link rel='stylesheet' href='./jquery-css/smoothness/jquery-ui-1.10.2.custom.min.css' />
+		<link rel='stylesheet' href='./lib/spectrum/spectrum.css' />
+		<link rel='stylesheet' href='./lib/jquery-css/smoothness/jquery-ui-1.10.2.custom.min.css' />
 		
 		<script src='./res/draw.js'></script>
 		<style type='text/css'>
