--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<!--JAVASCRIPT LIBRARIES-->
 		<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
-		<script src='./lib/kinetic-v4.3.1.js'></script>
+		<script src='./lib/kinetic-v4.4.0.min.js'></script>
 		<script src='./lib/spectrum/spectrum.js'></script>
 		
 		<!--CSS LIBRARIES-->
